--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <title>Visit Egypt With Team BALMAR</title>
 
     <link rel="stylesheet" href="../Header & Footer/Header&Footer.css" />
-    <link rel="stylesheet" href="HomePage.css" />
+    <link rel="stylesheet" href="Home Page/HomePage.css" />
   </head>
   <body>
     <!-- !Header Start -->
