--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" href="../Images/Visit Egypt.webp" />
     <title>Visit Egypt With Team BALMAR</title>
 
-    <link rel="stylesheet" href="../Header & Footer/Header&Footer.css" />
+    <link rel="stylesheet" href="Header & Footer/Header&Footer.css" />
     <link rel="stylesheet" href="Home Page/HomePage.css" />
   </head>
   <body>
@@ -33,15 +33,15 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="../Home Page/HomePage.html">
-            <img src="../Images/Logo.webp" alt="" />
+          <a href="Home Page/HomePage.html">
+            <img src="Images/Logo.webp" alt="" />
           </a>
         </div>
         <nav>
-          <a href="../Tour Packages/TourPackages.html">Tour Packages</a>
-          <a href="../Places To Visit/PlacesToVisit.html">Places To Visit</a>
-          <a href="../Free Guide/FreeGuide.html">visit Egypt Free Guide</a>
-          <a href="../Contact/Contact.html">Contact</a>
+          <a href="Tour Packages/TourPackages.html">Tour Packages</a>
+          <a href="Places To Visit/PlacesToVisit.html">Places To Visit</a>
+          <a href="Free Guide/FreeGuide.html">visit Egypt Free Guide</a>
+          <a href="Contact/Contact.html">Contact</a>
         </nav>
         <div class="icons">
           <div class="icon">
@@ -89,7 +89,7 @@
             <p><a href="#">Lost your password?</a></p>
             <p class="register-text">
               Don’t have an account?
-              <a href="../SignUp/SignUp.html">Register</a>
+              <a href="SignUp/SignUp.html">Register</a>
             </p>
           </div>
         </form>
@@ -105,7 +105,7 @@
     <section id="home-page" class="home">
       <div class="bg-video">
         <video autoplay muted loop>
-          <source src="../Images/Background Video.mp4" type="video/mp4" />
+          <source src="Images/Background Video.mp4" type="video/mp4" />
           Your browser doesn't support the video tag.
         </video>
       </div>
@@ -113,7 +113,7 @@
         <span class="home-span bilbo-swash-caps-regular">Visit Egypt</span>
         <h1>Where Would You Like To Go?</h1>
         <p>Find the Most Beautiful & Historic Places Around Egypt</p>
-        <a href="../Tour Packages/TourPackages.html">
+        <a href="Tour Packages/TourPackages.html">
           <button>
             <i class="fa-solid fa-plane-departure"></i>
             Book Your Trip Now!
@@ -197,7 +197,7 @@
         <div class="packages-content">
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-03.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-03.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -213,7 +213,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-06.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-06.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -229,7 +229,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/cairo-siwa-03.webp" alt="" />
+              <img src="Images/cairo-siwa-03.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -245,7 +245,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/Discover-Your-Passions-08.webp" alt="" />
+              <img src="Images/Discover-Your-Passions-08.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -261,7 +261,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-07.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-07.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -277,7 +277,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-17.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-17.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -293,7 +293,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-01.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-01.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -309,7 +309,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/CairoLuxorToAswan-10.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-10.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -325,7 +325,7 @@
           </div>
           <div class="cards">
             <div class="card-image">
-              <img src="../Images/Last-trip.webp" alt="" />
+              <img src="Images/Last-trip.webp" alt="" />
             </div>
             <div class="card-content">
               <div class="Icons">
@@ -369,31 +369,31 @@
         <div class="cards-section">
           <div class="place-card">
             <img
-              src="../Images/giza-pyramid-EGYPTSECRETS1016-617b2b1b23dd4fd38bc9f365af7235ab.webp"
+              src="Images/giza-pyramid-EGYPTSECRETS1016-617b2b1b23dd4fd38bc9f365af7235ab.webp"
               alt="Manial place Museum"
             />
             <div class="text">The Great Pyramids</div>
           </div>
           <div class="place-card large">
-            <img src="../Images/red-sea222.webp" alt="Temple of Edfu" />
+            <img src="Images/red-sea222.webp" alt="Temple of Edfu" />
             <span class="home-span">Beaches</span>
             <div class="text">Discover the Red Sea</div>
           </div>
           <div class="place-card">
             <img
-              src="../Images/shutterstock_2449878561.webp"
+              src="Images/shutterstock_2449878561.webp"
               alt="the-mosque-madrassa-of-sultan-hassan"
             />
             <div class="text">Ancient Egypt</div>
           </div>
           <div class="place-card">
-            <img src="../Images/alexandria.jpg" alt="Manial place Museum" />
+            <img src="Images/alexandria.jpg" alt="Manial place Museum" />
             <span class="home-span">Visit</span>
             <div class="text">Alexandria</div>
           </div>
           <div class="place-card large">
             <img
-              src="../Images/statues-entrance-Ramses-II-Luxor-temple-complex.webp"
+              src="Images/statues-entrance-Ramses-II-Luxor-temple-complex.webp"
               alt="Temple of Edfu"
             />
             <span class="home-span">Tombs of </span>
@@ -401,7 +401,7 @@
           </div>
           <div class="place-card">
             <img
-              src="../Images/Hurghada.webp"
+              src="Images/Hurghada.webp"
               alt="the-mosque-madrassa-of-sultan-hassan"
             />
             <div class="text">Visit Egypt</div>
@@ -451,7 +451,7 @@
           <button>Plan Your Trip Now</button>
         </div>
         <div class="right">
-          <img src="../Images/shutterstock_2449883975.webp" alt="" />
+          <img src="Images/shutterstock_2449883975.webp" alt="" />
           <div class="circle1"></div>
           <div class="circle2"></div>
         </div>
@@ -473,28 +473,28 @@
           <div class="list-column">
             <h2>Featured Tours</h2>
             <div class="single-list">
-              <img src="../Images/Last-trip.webp" alt="" />
+              <img src="Images/Last-trip.webp" alt="" />
               <div class="list-content">
                 <h5>Pyramids Pathaway</h5>
                 <p>From <span>$2640</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/Discover-Your-Passions-06.webp" alt="" />
+              <img src="Images/Discover-Your-Passions-06.webp" alt="" />
               <div class="list-content">
                 <h5>7 days/6 nights Cairo, Aswan, Luxor and Abu Simbel</h5>
                 <p>From <span>$2585</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/CairoLuxorToAswan-06.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-06.webp" alt="" />
               <div class="list-content">
                 <h5>Discover the Wonders of Ancient Egypt</h5>
                 <p>From <span>$2500</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/Discover-Your-Passions-09.webp" alt="" />
+              <img src="Images/Discover-Your-Passions-09.webp" alt="" />
               <div class="list-content">
                 <h5>Luxury Nile & Desert Retreat (10 Days)</h5>
                 <p>From <span>$2500</span></p>
@@ -504,21 +504,21 @@
           <div class="list-column">
             <h2>Best Price</h2>
             <div class="single-list">
-              <img src="../Images/Egypts-Map.webp" alt="" />
+              <img src="Images/Egypts-Map.webp" alt="" />
               <div class="list-content">
                 <h5>Customize Your Trip</h5>
                 <p>From <span>$0</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/Half-05.webp" alt="" />
+              <img src="Images/Half-05.webp" alt="" />
               <div class="list-content">
                 <h5>Half-Day Citadel Trip</h5>
                 <p>From <span>$149</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/CairoLuxorToAswan-04.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-04.webp" alt="" />
               <div class="list-content">
                 <h5>
                   One-Day Itinerary: Pyramids, Sphinx, and Grand Egyptian Museum
@@ -527,7 +527,7 @@
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/CairoLuxorToAswan-05.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-05.webp" alt="" />
               <div class="list-content">
                 <h5>Pyramids Day Trip</h5>
                 <p>From <span>$250</span></p>
@@ -537,28 +537,28 @@
           <div class="list-column">
             <h2>Best Rating</h2>
             <div class="single-list">
-              <img src="../Images/CairoLuxorToAswan-03.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-03.webp" alt="" />
               <div class="list-content">
                 <h5>Pharaoh's Journey</h5>
                 <p>From <span>$1200</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/CairoLuxorToAswan-06.webp" alt="" />
+              <img src="Images/CairoLuxorToAswan-06.webp" alt="" />
               <div class="list-content">
                 <h5>Discover the Wonders of Ancient Egypt</h5>
                 <p>From <span>$2500</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/cairo-siwa-03.webp" alt="" />
+              <img src="Images/cairo-siwa-03.webp" alt="" />
               <div class="list-content">
                 <h5>Cairo, Siwa & Alexandria Adventure</h5>
                 <p>From <span>$2168</span></p>
               </div>
             </div>
             <div class="single-list">
-              <img src="../Images/Discover-Your-Passions-08.webp" alt="" />
+              <img src="Images/Discover-Your-Passions-08.webp" alt="" />
               <div class="list-content">
                 <h5>Discover Your Passions</h5>
                 <p>From <span>$1414</span></p>
@@ -578,7 +578,7 @@
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-about">
-          <img src="../Images/Visit-Egypt-122.webp" alt="" />
+          <img src="Images/Visit-Egypt-122.webp" alt="" />
           <p>Beyond the Pyramids:</p>
           <p>Experience the Heart of Egypt.</p>
 
